HelloUltraviolet/Fixtures/RejectedSource/Expressions/IndexNonIndexable/Source/Main.uv
//! Rejected expression specimen for indexing a non-indexable value.

public procedure indexNonIndexableReference() -> i32 {
    let value: i32 = 3
    return value[0usize]
}
